Improved exception handling, added MockMvc-based test cases, and updated README formatting